// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support renders search panel by default 1`] = `
<Modal.LEGACY
  onClose={[MockFunction]}
  open={true}
  showCloseButton={true}
>
  <Panel.LEGACY
    className="Support"
  >
    <Tabs
      connectBelow={true}
      disableResponsiveBehavior={true}
      selected={0}
      tabs={
        Array [
          Object {
            "content": "Search Help",
            "onClick": [Function],
          },
          Object {
            "content": "Submit A Ticket",
            "onClick": [Function],
          },
          Object {
            "content": "Contact Us",
            "onClick": [Function],
          },
        ]
      }
    />
    <SearchPanel />
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`Support renders search panel with current page search term 1`] = `
<Modal.LEGACY
  onClose={[MockFunction]}
  open={true}
  showCloseButton={true}
>
  <Panel.LEGACY
    className="Support"
  >
    <Tabs
      connectBelow={true}
      disableResponsiveBehavior={true}
      selected={0}
      tabs={
        Array [
          Object {
            "content": "Search Help",
            "onClick": [Function],
          },
          Object {
            "content": "Submit A Ticket",
            "onClick": [Function],
          },
          Object {
            "content": "Contact Us",
            "onClick": [Function],
          },
        ]
      }
    />
    <SearchPanel
      defaultSearchText="exampleKeyword"
    />
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`Support renders search panel without tabs 1`] = `
<Modal.LEGACY
  onClose={[MockFunction]}
  open={true}
  showCloseButton={true}
>
  <Panel.LEGACY
    className="Support"
  >
    <SearchPanel />
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`Support renders support contact panel 1`] = `
<Modal.LEGACY
  onClose={[MockFunction]}
  open={true}
  showCloseButton={true}
>
  <Panel.LEGACY
    className="Support"
  >
    <Tabs
      connectBelow={true}
      disableResponsiveBehavior={true}
      selected={2}
      tabs={
        Array [
          Object {
            "content": "Search Help",
            "onClick": [Function],
          },
          Object {
            "content": "Submit A Ticket",
            "onClick": [Function],
          },
          Object {
            "content": "Contact Us",
            "onClick": [Function],
          },
        ]
      }
    />
    <div
      className="SupportContainer"
    >
      <h6>
        We are available Monday through Friday, 9am to 7pm Eastern time.
      </h6>
      <UnstyledLink
        to="tel:1-415-751-0928"
      >
        +1 (415) 751-0928
      </UnstyledLink>
    </div>
  </Panel.LEGACY>
</Modal.LEGACY>
`;

exports[`Support renders support form 1`] = `
<Modal.LEGACY
  onClose={[MockFunction]}
  open={true}
  showCloseButton={true}
>
  <Panel.LEGACY
    className="Support"
  >
    <Tabs
      connectBelow={true}
      disableResponsiveBehavior={true}
      selected={1}
      tabs={
        Array [
          Object {
            "content": "Search Help",
            "onClick": [Function],
          },
          Object {
            "content": "Submit A Ticket",
            "onClick": [Function],
          },
          Object {
            "content": "Contact Us",
            "onClick": [Function],
          },
        ]
      }
    />
    <Connect(ReduxForm)
      onClose={[MockFunction]}
    />
  </Panel.LEGACY>
</Modal.LEGACY>
`;
